src/test/ui/issues/issue-59326-compile-fail.stderr
error[E0271]: type mismatch resolving `<u32 as Framing>::F == ()`
  --> $DIR/issue-59326-compile-fail.rs:26:21
   |
LL |     build_server(|| make_server())
   |                     ^^^^^^^^^^^^^ expected `u32`, found `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
